@@ -21,7 +21,6 @@ www.gnome.org/friends/Makefile
 www.gnome.org/new-friends/Makefile
 www.gnome.org/new-friends/css/Makefile
 www.gnome.org/new-friends/images/Makefile
-www.gnome.org/new-friends/include/Makefile
 www.gnome.org/new-friends/js/Makefile
 www.gnome.org/fonts/Makefile
 www.gnome.org/i18n/Makefile
