@@ -1,10 +1,0 @@
-SUBDIRS =
-
-urlpath = /new-friends/include
-
-page_DATA = \
-	functions.php
-
-EXTRA_DIST=$(page_DATA)
-
-include $(top_srcdir)/rules.common
