@@ -1,14 +1,0 @@
-<?php
-
-
-function getPreviousFormData($post=null) {
-
-	if($post != null) {
-		
-		
-
-	}
-
-}
-
-?>
