@@ -1,3 +1,8 @@
+2008-01-06  Lucas Rocha  <lucasr@gnome.org>
+
+	* configure.in, www.gnome.org/new-friends/Makefile.am,
+	www.gnome.org/new-friends/include/*: remove unused file. 
+
 2008-01-05  Lucas Rocha  <lucasr@gnome.org>
 
 	* www.gnome.org/new-friends/*: set proper title in the page header.
